# hypotmri

./: .gitignore  README.md  aps_pRF.mat  how_to_write_a_new_stage.md  todo.md
anatomical/: qc_surfaces.sh  qc_surfaces_movie.py  s00_anat_pipeline.md  s01_fmriprep_anat_only.md  s01_fmriprep_anat_only.sh  s01_hpc_submit.sh  s02_b14atlas.py  s02_b14atlas_notes.md  s03_autoflatten.md  s04_pycortex.py  s04_pycortex_notes.md
config/: check_pipeline_outputs.ipynb  config_pipeline.sh  config_pipeline_example.sh  config_project.sh  hpc_qsub_cheatsheet.md  hpc_setup.md  local_setup.md  s00_containers.sh  s00_containers_make_with_docker.sh  s00_docker.sh  s00_mamba.sh  s00_python_environments.py  s00_python_environments.sh  set_project.sh  set_remote_paths.sh  trouble_shooting.md
cvl_utils/: README.md  requirements.txt  setup.cfg  setup.py
cvl_utils/cvl_utils/: denoise.py  og_roni.py  preproc_func.py  prf_utils.py  prfpy_plotter.py  prfpy_surf.py  prfpy_utils.py
experimental/: bcoder_env.md  fsl_topup.py  fsl_topup.sh  prfs.ipynb  s01_freesurfer.md  s01_mc_sdc copy.sh  s01_mc_sdc.md  s01_mc_sdc.sh  s01_mcflirt.md  s01_mcflirt.sh  s02_bbreg_mcflirt.sh  s02_fsl_topup.md  s02_fsl_topup.sh  s02_functional_alignment.md  s02_functional_alignment.sh  s03_concat_transform.md  s03_concat_transform.sh  s04_generate_confounds_call.sh  s04_generate_confounds_call_ni.sh  s04_generate_confounds_nipy.py  sXX_fmriprep.md  test.ipynb
functional/: bidsfilter.json  preproc_utils.py  s00_func_pipeline.md  s01_sdc.md  s01_sdc_AFNI.py  s01_sdc_AFNI.sh  s01_sdc_fsl.py  s01_sdc_fsl.sh  (+17 more)
(+83 files in other folders)
