[metadata]
name = cvl_utils
version = 0.1.0
description = Utilities for CVL projects
author = Marcus Daghlian
author_email = marcusdag@googlemail.com

[options]
packages = find:
install_requires =
    matplotlib
    numpy
    seaborn
    scipy
    regex
    PyYAML
    pandas
    tqdm

[options.packages.find]
include =
    cvl_utils
    cvl_utils.*

[options.package_data]
cvl_utils =
    *.json